--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/EventEmitterSample.js"
+            "program": "${workspaceFolder}/EventEmitterSample.js",
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
